# neural-network-hello-world

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_coach.md  README_experiments.md  README_gsi.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_adapter.py
artifacts/: coverage.xml  det_test1.csv  metrics.csv  metrics_confusion.csv  rl_metrics.csv  rl_opponents.json  rl_opponents_dota.json  run.json  test_eval.pt  test_league_pool.json  test_manual.json  test_metrics.csv  test_migration.json  test_migration_demo.json  test_pool_v2.json  test_pool_v2_updates.json  tuning.csv  tuning_test.csv
docs/: coaching-system.md  dota-rl-plan.md
experiments/: coach_mvp.md  pfsp_even_v1.md
neural_network_hello_world.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: __init__.py  coach_live.py  coach_offline_eval.py  gsi_replay.py  gsi_run.py  migrate_pool_schema.py  replay_offline.py  rl_sweep.py  setup_gsi.py  test_collector_steps.py  test_gsi_system.py  test_role_aggregation.py
src/: checkpoint.py  config.py  data.py  export.py  hello_nn.py  logger.py  metrics.py  models.py  predict.py  train_fashion_mnist.py  train_loop.py  tune.py  utils.py
tests/: test_ckpt_io.py  test_elo.py  test_elo_pool.py  test_eval_cli_empty_pool.py  test_eval_heads.py  test_eval_updates.py  test_gating.py  test_gating_demo.py  test_gsi_server.py  test_integration_gating.py  test_migrate_pool_schema.py  test_opponent_pool.py  test_pfsp_ramp.py  test_pool_prune.py  test_pool_updates.py  test_role_aware_policies.py  test_sampling.py  (+3 more)
(+58 files in other folders)
